cluster/prod/apps/immich/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: immich
  namespace: immich
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-public
    nginx.ingress.kubernetes.io/proxy-body-size: "0"
spec:
  ingressClassName: public
  tls:
    - hosts:
        - immich.lysakermoen.com
      secretName: immich-tls
  rules:
    - host: immich.lysakermoen.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: immich-server
                port:
                  number: 2283
